--- a/sarah.html
+++ b/sarah.html
@@ -80,7 +80,7 @@ body {
     <div class="team">
 
         <div class="member">
-            <img src="alexis.jpg" alt="Alexis">
+            <img src="d:\icons\4tox\IMG_20260128_200043_849.jpg" alt="Alexis">
             <h3>Alexis</h3>
             <div class="role">Frontend Developer</div>
             <div class="desc">
@@ -89,7 +89,7 @@ body {
         </div>
 
         <div class="member">
-            <img src="aboud.jpg" alt="Aboud">
+            <img src="d:\icons\4tox\IMG_20260103_032106_033.webp" alt="Aboud">
             <h3>Aboud</h3>
             <div class="role">Backend Developer</div>
             <div class="desc">
@@ -98,7 +98,7 @@ body {
         </div>
 
         <div class="member">
-            <img src="sarah.jpg" alt="Sarah">
+            <img src="d:\icons\4tox\IMG_20260128_200136_270.jpg" alt="Sarah">
             <h3>Sarah</h3>
             <div class="role">UI/UX Designer</div>
             <div class="desc">
